# doghouse

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  doghouse-inverter.service  doghouse.service  logger-inverter.env.example  logger.env.example
src/doghouse/: __init__.py  __main__.py  app.py  buffer.py  config.py  health.py  logging_setup.py  normalize.py  sd_notify.py  sync.py  ve_direct_reader.py
tests/: test_buffer.py  test_config.py  test_health.py  test_integration.py  test_logging_setup.py  test_normalize.py  test_normalize_inverter.py  test_sd_notify.py  test_smoke.py  test_sync.py  test_ve_direct_reader.py
