[project]
name = "doghouse"
version = "0.1.0"
description = "VE.Direct solar telemetry edge node for SOPHIA"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Jesse", email = "jesse@genevieve.technology" }]
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.4",
    "vedirect-m8>=1.3",
]

[project.scripts]
doghouse = "doghouse.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "types-aiofiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doghouse"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # bandit
    "A",    # builtins
    "RET",  # return
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "PTH",  # use pathlib
    "PL",   # pylint
    "RUF",  # ruff
    "ASYNC",# async
    "D",    # pydocstyle
]
ignore = [
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "PLR0913",# allow many args in config/ctor
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_unimported = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["vedirect_m8.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
